cmake_minimum_required(VERSION 3.14)
project(Sandbox C)

set(CMAKE_C_STANDARD 11)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -pthread")
include_directories(source/inc)
include_directories(Data_Struct/inc)
include_directories(ooc/inc)
include_directories(cstl/inc)
include_directories(csptr/inc)
find_package(GTest REQUIRED)
include_directories(${GTEST_INCLUDE_DIRS})
add_executable(Sandbox
        main.c
        Data_Struct/inc/Matrix.h
        Data_Struct/inc/Circuit_List.h
        Data_Struct/inc/DuoList.h
        Data_Struct/inc/Dynamic_Queue.h
        source/inc/Inet.h
        Data_Struct/inc/List.h
        source/inc/Multithread.h
        Data_Struct/inc/Queue.h
        Data_Struct/inc/Stack.h
        source/inc/Tutorial.h
        ooc/inc/OOBase.h
        ooc/inc/OOCfg.h
        ooc/inc/OOCore.h
        ooc/inc/OODbg.h
        ooc/inc/OOStd.h
        Data_Struct/src/Matrix.c
        Data_Struct/src/Circuit_List.c
        Data_Struct/src/DuoList.c
        Data_Struct/src/Dynamic_Queue.c
        source/src/Inet.c
        Data_Struct/src/Data_Test.c
        Data_Struct/src/List.c
        source/src/Multithread.c
        Data_Struct/src/Queue.c
        Data_Struct/src/Stack.c
        Data_Struct/inc/sglib.h
        Data_Struct/inc/Data_Test.h
        source/src/Tutorial.c
        ooc/src/OODbg.c
        source/src/Object.c
        source/inc/Object.h
        cstl/inc/c_algorithms.h
        cstl/inc/c_array.h
        cstl/inc/c_deque.h
        cstl/inc/c_errors.h
        cstl/inc/c_iterator.h
        cstl/inc/c_lib.h
        cstl/inc/c_list.h
        cstl/inc/c_map.h
        cstl/inc/c_rb.h
        cstl/inc/c_set.h
        cstl/src/c_algorithms.c
        cstl/src/c_array.c
        cstl/src/c_deque.c
        cstl/src/c_list.c
        cstl/src/c_map.c
        cstl/src/c_rb.c
        cstl/src/c_set.c
        cstl/src/c_util.c
        cstl/test/t_c_algorithms.c
        cstl/test/t_c_array.c
        cstl/test/t_c_deque.c
        cstl/test/t_c_map.c
        cstl/test/t_c_rb.c
        cstl/test/t_c_set.c
        cstl/test/t_c_slist.c
        cstl/test/t_clib.c
        cstl/inc/t_clib.h
        csptr/inc/array.h
        csptr/inc/common.h
        csptr/inc/config.h
        csptr/inc/smalloc.h
        csptr/inc/smart_ptr.h
        csptr/inc/mman.h
        csptr/src/array.c
        csptr/src/mman.c)
target_link_libraries(Sandbox ${GTEST_LIBRARIES} pthread m)